--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,8 @@
   color: #242424;
   /* background-color: #242424; */
   /* background-color: #212529; */
-  background-color: #f0f8ff;
+  /* background-color: #f0f8ff; */
+  background-color: #fafafa;
   scroll-behavior: smooth;
 
   font-synthesis: none;
