--- a/src/Global.css
+++ b/src/Global.css
@@ -65,12 +65,17 @@
 
 .contact,
 .hero {
-  background: linear-gradient(
+  /* background: linear-gradient(
       to right,
       rgba(245, 245, 245, 0.8),
       rgba(245, 245, 245, 0.8)
     ),
-    url(assets\common-bg.svg);
+    url(assets\common-bg.svg); */
+
+  background-image: url("assets/bg.jpg");
+  background-position: center;
+  background-size: cover;
+  overflow: hidden;
 }
 
 .contact-shadow {
