--- a/src/Global.css
+++ b/src/Global.css
@@ -1,7 +1,6 @@
 .navbar {
   filter: drop-shadow(0 0 20px #666);
-  /* background: #ffffff; */
-  /* backdrop-filter: blur(10px); */
+  /* background: #ffffff26; */
 }
 
 .btn {
@@ -65,13 +64,6 @@
 
 .contact,
 .hero {
-  /* background: linear-gradient(
-      to right,
-      rgba(245, 245, 245, 0.8),
-      rgba(245, 245, 245, 0.8)
-    ),
-    url(assets\common-bg.svg); */
-
   background-image: url("assets/bg.jpg");
   background-position: center;
   background-size: cover;
