--- a/src/Global.css
+++ b/src/Global.css
@@ -81,12 +81,13 @@
 .fill {
   text-align: center;
   --tw-bg-opacity: 1;
-  -webkit-text-fill-color: rgb(17 24 39 / var(--tw-bg-opacity));
-  -webkit-text-stroke: 5px rgb(31 41 55 / var(--tw-text-opacity));
+  -webkit-text-fill-color: rgb(24 24 27 / var(--tw-bg-opacity));
+  -webkit-text-stroke: 5px rgb(39 39 42 / var(--tw-text-opacity));
 }
 
 .loading-page {
   animation: loading-animation 1s ease-in-out 2s 1;
+  overflow: hidden;
 }
 
 @keyframes loading-animation {
