--- a/src/Global.css
+++ b/src/Global.css
@@ -120,7 +120,7 @@
     flex-direction: column;
     font-size: 2rem;
     text-align: center;
-    padding: 1rem;
+    padding: 10px;
     border: 1px solid #777;
     color: #c0c0c0;
     background: #2c3032;
@@ -130,7 +130,7 @@
   }
 
   .name {
-    font-size: 10px;
+    font-size: 8px;
   }
 
   .box-shadow {
