--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
   font-family: "Noto Sans", sans-serif;
   line-height: 1.5;
   font-weight: 400;
+  cursor: url("src/assets/icons8-select-cursor-24.png"), auto;
 
   color-scheme: light dark;
   color: #242424;
@@ -10,6 +11,7 @@
   /* background-color: #f0f8ff; */
   background-color: #fafafa;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
